--- a/style/emotionsUse.css
+++ b/style/emotionsUse.css
@@ -1,5 +1,16 @@
 body {
   font-family: 'Poiret One', cursive;
+  background: url(../assets/bg_2.jpg);
+  background-size: cover;
+}
+
+h1 {
+  /*font-weight: 600;*/
+  font-size: 40px;
+}
+
+h1 small {
+    /*font-weight: 600;*/
 }
 
 .nav {
@@ -14,14 +25,15 @@ body {
 
 .list-group {
   border: none;
+  padding-bottom: 100px;
 }
 
 #effect {
   font-size: 25px;
-  margin-right:2%;
+  margin-right:2%；
 }
 
-
 .list-group-item {
-border:none;
+  border:none;
+  background-color: rgba(255, 255, 255, 0.65);
 }
