--- a/views/newFormula.html
+++ b/views/newFormula.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Brand</a>
+          <a class="navbar-brand" href="../index.html">Brand</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -102,7 +102,7 @@
         <input type="text" class="form-control" placeholder="" aria-describedby="basic-addon1">
       </div>
     </div>
-      <button type="button" class="btn btn-default addService" style = "float:right; margin-right: 5%; margin-bottom: 5%">Put your formula on Essential Oil!</button>
+      <button type="button" class="btn btn-default" style = "float:right; margin-right: 5%; margin-bottom: 5%">Put your formula on Essential Oil!</button>
 
 <script>
     $(document).on('click', '.addService', function(){
