--- a/views/emotionsUse.html
+++ b/views/emotionsUse.html
@@ -33,6 +33,7 @@
             <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li> -->
             <li><a href="/views/emotionsUse.html">Mind and Emotions</a></li>
             <li><a href="./newFormula.html">Add a New Formula</a></li>
+            <li><a href="./blog_form.html">Blog</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
