--- a/views/blog_form.html
+++ b/views/blog_form.html
@@ -89,6 +89,16 @@
         <textarea type="text" rows="5" cols="80" class="form-control" placeholder="Tell us about yourself" aria-describedby="basic-addon1">
         </textarea>
       </div>
+      <div class="input-group">
+          <span class="input-group-addon" id="basic-addon1">Upload Image</span>
+            <span class="input-group-btn">
+                <span class="btn btn-default btn-file">
+                    Browse… <input type="file" id="imgInp">
+                </span>
+            </span>
+            <!-- <input type="text" class="form-control" readonly> -->
+      </div>
+
       <div class="input-group col-md-6">
         <span class="input-group-addon" id="basic-addon1">Subject</span>
         <input type="text" class="form-control" placeholder="What's the article about?" aria-describedby="basic-addon1">
