--- a/views/newFormula.html
+++ b/views/newFormula.html
@@ -10,7 +10,8 @@
     <link href="#" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="../style/newFormula.css">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </head>
 
   <body>
@@ -102,6 +103,7 @@
         <span class="input-group-addon" id="basic-addon1">Amount</span>
         <input type="text" class="form-control" placeholder="" aria-describedby="basic-addon1">
       </div>
+        <div class="g-recaptcha" data-sitekey="6Ld_8VAUAAAAAE9W13uNrNex5FWM3sTN_hKB7FXm"></div>
     </div>
       <button type="button" class="btn btn-default" style = "float:right; margin-right: 5%; margin-bottom: 5%">Put your formula on Essential Oil!</button>
 
