--- a/style/home.css
+++ b/style/home.css
@@ -1,7 +1,11 @@
 body {
   font-family: 'Poiret One', cursive;
-  /*background: url(../assets/bg_2.jpg);*/
+  background: url(../assets/background.jpg);
   background-size: cover;
+}
+
+.nav {
+  font-size: 20px;
 }
 
 
@@ -154,4 +158,31 @@ body {
   size:30px;
   color:grey;
   display: none;
+}
+
+@media screen and (max-width: 767px) {
+
+    .header .navbar-default .navbar-nav .open .dropdown-menu>li>a{
+        color: #fff;
+        font-size: 16px;
+    }
+
+    .header .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover{
+        color: #ccc;
+    }
+
+    .header .navbar-collapse {
+        margin-left: 20px;
+        border-top: none;
+        box-shadow: none;
+    }
+
+    .header .main{
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+
+    .header .main h1{
+        font-size: 42px;
+    }
 }
