--- a/views/blog_form.html
+++ b/views/blog_form.html
@@ -10,7 +10,8 @@
     <link href="#" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="../style/newFormula.css">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </head>
 
   <body>
@@ -108,6 +109,7 @@
         <textarea placeholder="Tell us about your area of expertise" type="text" rows="10" cols="80" class="form-control" aria-describedby="basic-addon1">
         </textarea>
       </div>
+      <div class="g-recaptcha" data-sitekey="6Ld_8VAUAAAAAE9W13uNrNex5FWM3sTN_hKB7FXm"></div>
     </div>
       <button type="button" class="btn btn-default" style = "float:right; margin-right: 5%; margin-bottom: 5%">Submit your article</button>
 
