Subcribe button added, detail page added

--- a/views/detail.html
+++ b/views/detail.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,7 +11,13 @@
     <link href="#" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="../style/emotionsUse.css">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
+  <style>
+    .checked {
+        color: orange;
+    }
+  </style>
 
   <body>
     <div class="col-md-offset-5 title"><h1>Essential Oil</h1></div>
@@ -71,59 +78,33 @@
     </nav>
 
     <div class="page-header col-md-offset-1 col-md-10">
-      <h1>Mind and Emotions <small>Top 10 Essential Oils of Daily Use </small></h1>
+      <h1>Goodnight Sleep</h1>
     </div>
 
     <ul class="list-group col-md-offset-1 col-md-10">
-      <li class="list-group-item">
-        <a href="./detail.html"><img class="element" src="../assets/jasmine.jpg"  height="120" width="120"></a>
-        <a href="./detail.html"><img class="element" src="../assets/plus.png"  height="40" width="40"></a>
-        <a href="./detail.html"><img class="element" src="../assets/lavender.jpg"  height="120" width="120"></a>
-        <a href="./detail.html"><img class="element" src="../assets/equal.png"  height="40" width="40" style = "border-radius: 0px">
-          <span id = "effect">Good night sleep</span></a>
-      </li>
-      <li class="list-group-item">
-        <div class = "col-md-offset-6" >
-          <a href="#searchPage"><span id = "effect">No chapped lips</span>
-            <img class="element" src="../assets/equal.png"  height="40" width="40" style = "border-radius: 0px"></a>
-          <a href="#searchPage"><img class="element" src="../assets/coconutoil.jpg"  height="120" width="120"></a>
-          <a href="#searchPage"><img class="element" src="../assets/plus.png"  height="40" width="40"></a>
-          <a href="#searchPage"><img class="element" src="../assets/camphor.jpg"  height="120" width="120"></a>
-        </div>
-      </li>
-      <li class="list-group-item">
+      <li class="list-group-item" style="margin-bottom: -100px;">
         <a href="#searchPage"><img class="element" src="../assets/jasmine.jpg"  height="120" width="120"></a>
         <a href="#searchPage"><img class="element" src="../assets/plus.png"  height="40" width="40"></a>
         <a href="#searchPage"><img class="element" src="../assets/lavender.jpg"  height="120" width="120"></a>
         <a href="#searchPage"><img class="element" src="../assets/equal.png"  height="40" width="40" style = "border-radius: 0px">
           <span id = "effect">Good night sleep</span></a>
-      </li>
-      <li class="list-group-item">
-        <div class = "col-md-offset-6" >
-          <a href="#searchPage"><span id = "effect">No chapped lips</span>
-            <img class="element" src="../assets/equal.png"  height="40" width="40" style = "border-radius: 0px"></a>
-          <a href="#searchPage"><img class="element" src="../assets/coconutoil.jpg"  height="120" width="120"></a>
-          <a href="#searchPage"><img class="element" src="../assets/plus.png"  height="40" width="40"></a>
-          <a href="#searchPage"><img class="element" src="../assets/camphor.jpg"  height="120" width="120"></a>
-        </div>
-      </li>
-      <li class="list-group-item">
-        <a href="#searchPage"><img class="element" src="../assets/jasmine.jpg"  height="120" width="120"></a>
-        <a href="#searchPage"><img class="element" src="../assets/plus.png"  height="40" width="40"></a>
-        <a href="#searchPage"><img class="element" src="../assets/lavender.jpg"  height="120" width="120"></a>
-        <a href="#searchPage"><img class="element" src="../assets/equal.png"  height="40" width="40" style = "border-radius: 0px">
-          <span id = "effect">Good night sleep</span></a>
-      </li>
-      <li class="list-group-item">
-        <div class = "col-md-offset-6" >
-          <a href="#searchPage"><span id = "effect">No chapped lips</span>
-            <img class="element" src="../assets/equal.png"  height="40" width="40" style = "border-radius: 0px"></a>
-          <a href="#searchPage"><img class="element" src="../assets/coconutoil.jpg"  height="120" width="120"></a>
-          <a href="#searchPage"><img class="element" src="../assets/plus.png"  height="40" width="40"></a>
-          <a href="#searchPage"><img class="element" src="../assets/camphor.jpg"  height="120" width="120"></a>
-        </div>
       </li>
     </ul>
+    <div class="rating  col-md-offset-1 col-md-10" style="margin-bottom: 20px">
+      <h2>Star Rating</h2>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star"></span>
+    </div>
+    <div class="review col-md-offset-1 col-md-10">
+      <h2>Review</h2>
+      <div class="input-group col-md-6">
+        <input type="text" class="form-control" placeholder="Comment" aria-describedby="basic-addon1">
+      </div>
+      <button type="button" class="btn btn-default" style = "float:right; margin-right: 5%; margin-bottom: 5%">Submit Review</button>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
